feat: imlpement advanced fullstack pagination and navigation